Docs: add Docker info

--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -20,3 +20,30 @@ For instance, with Maven, add the following dependency to your POM file:
     <version>{project-version}</version>
 </dependency>
 ----
+
+== Docker
+
+When building native images in Docker using the standard Quarkus Docker configuration files some additional features need to be
+installed to support Apache POI.  Specifically font information is not included in Red Hat's ubi-minimal images.  To install it
+simply add these lines to your `DockerFile.native` file:
+
+[source]
+----
+FROM registry.access.redhat.com/ubi8/ubi-minimal:8.7
+
+######################### Set up environment for POI ##########################
+RUN microdnf update && microdnf install freetype && microdnf install fontconfig
+######################### Set up environment for POI ##########################
+
+WORKDIR /work/
+RUN chown 1001 /work \
+    && chmod "g+rwX" /work \
+    && chown 1001:root /work
+COPY --chown=1001:root target/*-runner /work/application
+
+EXPOSE 8080
+USER 1001
+
+CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
+----
+
