Improve container instructions

--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -32,7 +32,7 @@ simply add these lines to your `DockerFile.native` file:
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.7
 
 ######################### Set up environment for POI ##########################
-RUN microdnf update && microdnf install freetype && microdnf install fontconfig
+RUN microdnf update && microdnf install freetype fontconfig && microdnf clean all
 ######################### Set up environment for POI ##########################
 
 WORKDIR /work/
