Fix UBI link in docs

--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -24,7 +24,7 @@ For instance, with Maven, add the following dependency to your POM file:
 == Docker
 
 When building native images in Docker using the standard Quarkus Docker configuration files some additional features need to be
-installed to support Apache POI.  Specifically font information is not included in [Red Hat's ubi-minimal images](https://developers.redhat.com/products/rhel/ubi).  To install it
+installed to support Apache POI.  Specifically font information is not included in https://developers.redhat.com/products/rhel/ubi[Red Hat's ubi-minimal images].  To install it
 simply add these lines to your `DockerFile.native` file:
 
 [source]
