--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -27,7 +27,7 @@ When building native images in Docker using the standard Quarkus Docker configur
 installed to support Apache POI.  Specifically font information is not included in https://developers.redhat.com/products/rhel/ubi[Red Hat's ubi-minimal images].  To install it
 simply add these lines to your `DockerFile.native` file:
 
-[source]
+[source, dockerfile]
 ----
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.9
 
