--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -29,11 +29,11 @@ simply add these lines to your `DockerFile.native` file:
 
 [source, dockerfile]
 ----
-FROM registry.access.redhat.com/ubi8/ubi-minimal:8.9
+FROM registry.access.redhat.com/ubi9/ubi-minimal:9.5
 
-######################### Set up environment for POI ##########################
-RUN microdnf update && microdnf install freetype fontconfig && microdnf clean all
-######################### Set up environment for POI ##########################
+######################### Set up environment for POI #############################
+RUN microdnf update -y && microdnf install -y freetype fontconfig && microdnf clean all
+######################### Set up environment for POI #############################
 
 WORKDIR /work/
 RUN chown 1001 /work \
