--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -40,8 +40,8 @@ RUN chown 1001 /work \
     && chmod "g+rwX" /work \
     && chown 1001:root /work
 # Shared objects to be dynamically loaded at runtime as needed,
-COPY --chown=1001:root target/*.properties target/*.so /work/
-COPY --chown=1001:root target/*-runner /work/application
+COPY --chown=1001:root --chmod=0755 target/*.properties target/*.so /work/
+COPY --chown=1001:root --chmod=0755 target/*-runner /work/application
 # Permissions fix for Windows
 RUN chmod "ugo+x" /work/application
 EXPOSE 8080
